--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=PT+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
@@ -12,10 +13,53 @@
 </head>
 <body>
     <header>
-        <nav class="container debug">nav bar</nav>
+        <nav class="container d-flex justco-spacebtw aligit-center debug">
+            <img src="./img/logo.png" alt="logo">
+            <a href="#"><i class="fa-solid fa-bars"></i></a>
+        </nav>
+            <!-- <div>
+                <ul>
+                    <li><a href="">Planning</a></li>
+                    <li><a href="">Testimonials</a></li>
+                    <li><a href="">Features</a></li>
+                    <li><a href="">About Us</a></li>
+                    <li><a href="">Get Stated</a></li>      
+                </ul>
+            </div> -->
     </header>
-    <main></main>
-    <footer></footer>
+    <main>
+
+        <section class="" id="features">
+            <div class="container debug">features</div>
+
+        </section>
+        <section id="planning" class="purpl-bg">
+            <div class="container debug">planning</div>
+            
+
+        </section>
+        <section id="testimonials">
+            <div class="container debug">testimonials</div>
+
+        </section>
+        <section id="benefits" class="purpl-bg">
+            <div class="container debug">benefits</div>
+
+        </section>
+        <section id="aboutus">
+            <div class="container debug">about us</div>
+
+        </section>
+        <section id="cta" class="purpl-bg">
+            <div class="container debug">call to action</div>
+
+        </section>
+
+
+    </main>
+    <footer>
+        <div class="container debug">testo </div>
+    </footer>
 
     
 </body>
