add box, text + img to #features sect.

--- a/index.html
+++ b/index.html
@@ -30,7 +30,37 @@
     <main>
 
         <section class="" id="features">
-            <div class="container debug">features</div>
+            <div class="container debug">
+                <div class="card bord-radio debug">
+                    <div>
+                        <h2>Get a demo application</h2>
+                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Veritatis voluptatem perferendis dignissimos sapiente pariatur excepturi doloremque dicta debitis nemo eveniet!</p>
+                        <a href="#">**apple icon** App Store</a>
+                    </div>
+                    <div>
+                        <img class="p-bneg30" src="./img/phone.png" alt="">
+                    </div>
+                </div>
+                <div class="card bord-radio m-t20 text-center debug">
+                    <div>***icona***</div>
+                    <h2>Clean Code</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore eveniet ratione fugiat ex nisi atque, voluptatem totam recusandae natus eligendi.</p>
+                </div>
+                <div class="card bord-radio m-t20 text-center debug">
+                    <div>***icona***</div>
+                    <h2>Web Design</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore eveniet ratione fugiat ex nisi atque, voluptatem totam recusandae natus eligendi.</p></div>
+                <div class="card bord-radio m-t20 text-center debug">
+                    <div>***icona***</div>
+                    <h2>Development</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore eveniet ratione fugiat ex nisi atque, voluptatem totam recusandae natus eligendi.</p>
+                </div>
+                <div class="card bord-radio m-t20 text-center debug">
+                    <div>***icona***</div>
+                    <h2>Branding</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore eveniet ratione fugiat ex nisi atque, voluptatem totam recusandae natus eligendi.</p>
+                </div>
+            </div>
 
         </section>
         <section id="planning" class="purpl-bg">
