added testimonials section to fix

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     </header>
     <main>
 
-        <section class="" id="features">
+        <section class=" p-b50" id="features">
             <div class="container debug">
                 <div class="card aqua-bg bord-radio-20 ">
                     <div>
@@ -40,7 +40,7 @@
                         </a>
                     </div>
                     <div>
-                        <img class="p-bneg30 " src="./img/phone.png" alt="">
+                        <img class="p-bneg30 img100" src="./img/phone.png" alt="">
                     </div>
                 </div>
                 <div class="card aqua-bg bord-radio-20 m-t20 text-center ">
@@ -65,8 +65,8 @@
             </div>
 
         </section>
-        <section id="planning" class="purpl-bg">
-            <div class="container debug">
+        <section id="planning" class="purpl-bg p-b50">
+            <div class="container  debug">
                 <div>
                     <img class="img100 p-tb40" src="./img/planning1.png" alt="">
                 </div>
@@ -89,8 +89,36 @@
             
 
         </section>
-        <section id="testimonials">
-            <div class="container debug">testimonials</div>
+        <section id="testimonials" class="p-b50">
+            <div class="container debug">
+                <div>
+                    <h3 class="text-center p-t20 p-b20">testimonials</h3>
+                    <h2 class="text-center p-t20 p-b20">We are committed experts partners</h2>
+                    <p class="text-center p-t20 p-b20">We place huge value on strong relationship and have seen the benefits they bring to our business. Customers feedback is vital in helping us to get it right.</p>
+                </div>
+                <div class="card bord-radio-40 purpl-bg m-b20">
+                    <div class="round-img bord-radio100 ovf">
+                        <img class="round-img" src="./img/testimonial1.jpg" alt="">
+                    </div>
+                    <p class="text-center p-t20 p-b20">**icona**Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut excepturi enim ex aperiam suscipit vitae cum mollitia eligendi tenetur nisi.**icona**</p>
+                    <h3 class="text-center">Nat Reynolds</h3>
+                </div>
+                <div class="card bord-radio-40 purpl-bg m-b20">
+                    <div class="round-img bord-radio100 ovf">
+                        <img class="round-img" src="./img/testimonial2.jpg" alt="">
+                    </div>
+                    <p class="text-center p-t20 p-b20">**icona**Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut excepturi enim ex aperiam suscipit vitae cum mollitia eligendi tenetur nisi.**icona**</p>
+                    <h3 class="text-center">celia almeda</h3>
+                </div>
+                <div class="card bord-radio-40 purpl-bg ">
+                    <div class="round-img bord-radio100 ovf">
+                        <img class="round-img" src="./img/testimonial3.jpg" alt="">
+                    </div>
+                    <p class="text-center p-t20 p-b20">**icona**Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut excepturi enim ex aperiam suscipit vitae cum mollitia eligendi tenetur nisi.**icona**</p>
+                    <h3 class="text-center">bob roberts</h3>
+                </div>
+
+            </div>
 
         </section>
         <section id="benefits" class="purpl-bg">
