--- a/index.html
+++ b/index.html
@@ -97,21 +97,21 @@
                     <p class="text-center p-t20 p-b20">We place huge value on strong relationship and have seen the benefits they bring to our business. Customers feedback is vital in helping us to get it right.</p>
                 </div>
                 <div class="card bord-radio-40 purpl-bg m-b20">
-                    <div class="round-img bord-radio100 ovf">
+                    <div class="round-img m-0a bord-radio100 ovf">
                         <img class="round-img" src="./img/testimonial1.jpg" alt="">
                     </div>
                     <p class="text-center p-t20 p-b20">**icona**Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut excepturi enim ex aperiam suscipit vitae cum mollitia eligendi tenetur nisi.**icona**</p>
                     <h3 class="text-center">Nat Reynolds</h3>
                 </div>
                 <div class="card bord-radio-40 purpl-bg m-b20">
-                    <div class="round-img bord-radio100 ovf">
+                    <div class="round-img m-0a bord-radio100 ovf">
                         <img class="round-img" src="./img/testimonial2.jpg" alt="">
                     </div>
                     <p class="text-center p-t20 p-b20">**icona**Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut excepturi enim ex aperiam suscipit vitae cum mollitia eligendi tenetur nisi.**icona**</p>
                     <h3 class="text-center">celia almeda</h3>
                 </div>
                 <div class="card bord-radio-40 purpl-bg ">
-                    <div class="round-img bord-radio100 ovf">
+                    <div class="round-img m-0a bord-radio100 ovf">
                         <img class="round-img" src="./img/testimonial3.jpg" alt="">
                     </div>
                     <p class="text-center p-t20 p-b20">**icona**Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut excepturi enim ex aperiam suscipit vitae cum mollitia eligendi tenetur nisi.**icona**</p>
@@ -122,22 +122,81 @@
 
         </section>
         <section id="benefits" class="purpl-bg">
-            <div class="container debug">benefits</div>
+            <div class="container debug">
+                <h2>Benefits of working with us</h2>
+                <div class="card white-bg bord-radio-20 m-b20 debug">
+                    <h2>01</h2>
+                    <h3>Hight Quality</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam ratione ipsum iste, eveniet repellat voluptates adipisci maxime quisquam praesentium modi.</p>
+                    <a href="">***bottone***</a>
+                </div>
+                <div class="card white-bg bord-radio-20 m-b20 debug">
+                    <h2>01</h2>
+                    <h3>Hight Quality</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam ratione ipsum iste, eveniet repellat voluptates adipisci maxime quisquam praesentium modi.</p>
+                    <a href="">***bottone***</a>
+                </div>
+                <div class="card white-bg bord-radio-20 m-b20 debug">
+                    <h2>01</h2>
+                    <h3>Hight Quality</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam ratione ipsum iste, eveniet repellat voluptates adipisci maxime quisquam praesentium modi.</p>
+                    <a href="">***bottone***</a>
+                </div>
+                <div class="card white-bg bord-radio-20 m-b20 debug">
+                    <h2>01</h2>
+                    <h3>Hight Quality</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam ratione ipsum iste, eveniet repellat voluptates adipisci maxime quisquam praesentium modi.</p>
+                    <a href="">***bottone***</a>
+                </div>
+                <div class="card white-bg bord-radio-20 m-b20 debug">
+                    <h2>01</h2>
+                    <h3>Hight Quality</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam ratione ipsum iste, eveniet repellat voluptates adipisci maxime quisquam praesentium modi.</p>
+                    <a href="">***bottone***</a>
+                </div>
+                <div class="card white-bg bord-radio-20 m-b20 debug">
+                    <h2>01</h2>
+                    <h3>Hight Quality</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam ratione ipsum iste, eveniet repellat voluptates adipisci maxime quisquam praesentium modi.</p>
+                    <a href="">***bottone***</a>
+                </div>
+            </div>
 
         </section>
         <section id="aboutus">
-            <div class="container debug">about us</div>
+            <div class="container debug">
+                <h2>About Us</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus voluptatem quam provident natus molestiae, explicabo quo deserunt commodi, nisi repellat ratione, porro iste quos temporibus a! Rerum dolores quas laudantium!</p>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nisi culpa facilis maxime soluta necessitatibus praesentium sapiente ab. Magnam porro amet alias quis? Illum, amet deleniti et nihil sint quisquam velit?</p>
+                <div class="round-img bord-radio100 ovf">
+                    <img class="round-img" src="./img/about.jpg" alt="">
+                </div>
+                <h2>I help companies Lorem, ipsum dolor sit amet consectetur adipisicing elit. Soluta, id.</h2>
+                <a href="#">***icona***Find me on linkedin</a>
+          
+            </div>
 
         </section>
         <section id="cta" class="purpl-bg">
-            <div class="container debug">call to action</div>
+            <div class="container debug">
+                <p>get started</p>
+                <h3>Simple, Transparent Pricing</h3>
+                <h2>It's Free!</h2>
+                <p>We're still in beta and we will be for a while. As we add more functionality, we'll look into other plans with more controls.</p>
+                <a href="#">Get Started</a>
+                <span>Copyright 2021 Boolean * Classe XX * Privacy policy
+                </span>
+            </div>
 
         </section>
 
 
     </main>
     <footer>
-        <div class="container debug">testo </div>
+        <div class="container debug">
+            <span>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aperiam ipsa nemo illum quod odio explicabo quisquam necessitatibus minima qui quibusdam.</span>
+            <span> <a href=""> Lorem ipsum</a> dolor sit amet <a href="">onsectetur adipisicing</a></span>
+        </div>
     </footer>
 
     
