text and details fixed to sec 1-4

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                         <h2 class="p-b20 blue-text">Get a demo application</h2>
                         <p class="p-b20 txt-interli">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Veritatis voluptatem perferendis dignissimos sapiente pariatur excepturi doloremque dicta debitis nemo eveniet!</p>
                         <a class="p-b20 text-deco feat-btn inblock bord-radio-20 m-b20" href="#">
-                            <i class="fa-brands fa-apple"></i>App Store
+                            <i class="fa-brands fa-apple "></i>App Store
                         </a>
                     </div>
                     <div>
@@ -78,7 +78,7 @@
                     <img class="img100" src="./img/planning2.png" alt="">
                     <h2 class="black-txt p-t20 text-center">App Development</h2>
                     <p class="black-txt p-t20 text-center">Develop an on-demand app for your delivery business to reach your targeted customers without any interruption.</p>
-                    <div class="arrw-btn m-t20 text-center">
+                    <div class="arrw-btn  text-center">
                         <i class="fa-solid fa-arrow-down-long "></i>
                     </div>
                 </div>
@@ -92,73 +92,73 @@
         <section id="testimonials" class="p-b50">
             <div class="container debug">
                 <div>
-                    <h3 class="text-center p-t20 p-b20">testimonials</h3>
-                    <h2 class="text-center p-t20 p-b20">We are committed experts partners</h2>
-                    <p class="text-center p-t20 p-b20">We place huge value on strong relationship and have seen the benefits they bring to our business. Customers feedback is vital in helping us to get it right.</p>
+                    <h3 class="upcase text-center p-t20">testimonials</h3>
+                    <h2 class="purpl-txt text-center p-t20 p-b20">We are committed experts partners</h2>
+                    <p class="text-center txt-interli p-t20 p-b20">We place huge value on strong relationship and have seen the benefits they bring to our business. Customers feedback is vital in helping us to get it right.</p>
+                </div>
+                <div class="card bord-radio-40 purpl-bg m-t20 m-b20">
+                    <div class="round-img m-0a bord-radio100 ovf">
+                        <img src="./img/testimonial1.jpg" alt="">
+                    </div>
+                    <p class="text-center txt-interli white-txt p-t20 p-b20"><i class="fa-solid fa-quote-left"></i>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut excepturi enim ex aperiam suscipit vitae cum mollitia eligendi tenetur nisi.<i class="fa-solid fa-quote-right"></i></p>
+                    <h3 class="text-center white-txt upcase">Nat Reynolds</h3>
                 </div>
                 <div class="card bord-radio-40 purpl-bg m-b20">
                     <div class="round-img m-0a bord-radio100 ovf">
-                        <img class="round-img" src="./img/testimonial1.jpg" alt="">
+                        <img src="./img/testimonial2.jpg" alt="">
                     </div>
-                    <p class="text-center p-t20 p-b20">**icona**Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut excepturi enim ex aperiam suscipit vitae cum mollitia eligendi tenetur nisi.**icona**</p>
-                    <h3 class="text-center">Nat Reynolds</h3>
-                </div>
-                <div class="card bord-radio-40 purpl-bg m-b20">
-                    <div class="round-img m-0a bord-radio100 ovf">
-                        <img class="round-img" src="./img/testimonial2.jpg" alt="">
-                    </div>
-                    <p class="text-center p-t20 p-b20">**icona**Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut excepturi enim ex aperiam suscipit vitae cum mollitia eligendi tenetur nisi.**icona**</p>
-                    <h3 class="text-center">celia almeda</h3>
+                    <p class="text-center txt-interli white-txt p-t20 p-b20"><i class="fa-solid fa-quote-left"></i>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut excepturi enim ex aperiam suscipit vitae cum mollitia eligendi tenetur nisi.<i class="fa-solid fa-quote-right"></i></p>
+                    <h3 class="text-center white-txt upcase">celia almeda</h3>
                 </div>
                 <div class="card bord-radio-40 purpl-bg ">
                     <div class="round-img m-0a bord-radio100 ovf">
-                        <img class="round-img" src="./img/testimonial3.jpg" alt="">
+                        <img src="./img/testimonial3.jpg" alt="">
                     </div>
-                    <p class="text-center p-t20 p-b20">**icona**Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut excepturi enim ex aperiam suscipit vitae cum mollitia eligendi tenetur nisi.**icona**</p>
-                    <h3 class="text-center">bob roberts</h3>
+                    <p class="text-center txt-interli white-txt p-t20 p-b20"><i class="fa-solid fa-quote-left"></i>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut excepturi enim ex aperiam suscipit vitae cum mollitia eligendi tenetur nisi.<i class="fa-solid fa-quote-right"></i></p>
+                    <h3 class="text-center white-txt upcase">bob roberts</h3>
                 </div>
 
             </div>
 
         </section>
-        <section id="benefits" class="purpl-bg">
+        <section id="benefits" class="purpl-bg p-b20">
             <div class="container debug">
-                <h2>Benefits of working with us</h2>
+                <h2 class="white-txt text-center p-tb40">Benefits of working with us</h2>
                 <div class="card white-bg bord-radio-20 m-b20 debug">
-                    <h2>01</h2>
-                    <h3>Hight Quality</h3>
+                    <h4 class="purpl-txt p-b20">01</h4>
+                    <h3 class="purpl-txt p-b20">Hight Quality</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam ratione ipsum iste, eveniet repellat voluptates adipisci maxime quisquam praesentium modi.</p>
-                    <a href="">***bottone***</a>
+                    <a class="bene-btn" href="">more</a>
                 </div>
                 <div class="card white-bg bord-radio-20 m-b20 debug">
-                    <h2>01</h2>
-                    <h3>Hight Quality</h3>
+                    <h4 class="purpl-txt p-b20">02</h4>
+                    <h3 class="purpl-txt p-b20">Hight Quality</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam ratione ipsum iste, eveniet repellat voluptates adipisci maxime quisquam praesentium modi.</p>
-                    <a href="">***bottone***</a>
+                    <a class="bene-btn" href="">more</a>
                 </div>
                 <div class="card white-bg bord-radio-20 m-b20 debug">
-                    <h2>01</h2>
-                    <h3>Hight Quality</h3>
+                    <h4 class="purpl-txt p-b20">03</h4>
+                    <h3 class="purpl-txt p-b20">Hight Quality</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam ratione ipsum iste, eveniet repellat voluptates adipisci maxime quisquam praesentium modi.</p>
-                    <a href="">***bottone***</a>
+                    <a class="bene-btn" href="">more</a>
                 </div>
                 <div class="card white-bg bord-radio-20 m-b20 debug">
-                    <h2>01</h2>
-                    <h3>Hight Quality</h3>
+                    <h4 class="purpl-txt p-b20">04</h4>
+                    <h3 class="purpl-txt p-b20">Hight Quality</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam ratione ipsum iste, eveniet repellat voluptates adipisci maxime quisquam praesentium modi.</p>
-                    <a href="">***bottone***</a>
+                    <a class="bene-btn" href="">more</a>
                 </div>
                 <div class="card white-bg bord-radio-20 m-b20 debug">
-                    <h2>01</h2>
-                    <h3>Hight Quality</h3>
+                    <h4 class="purpl-txt p-b20">05</h4>
+                    <h3 class="purpl-txt p-b20">Hight Quality</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam ratione ipsum iste, eveniet repellat voluptates adipisci maxime quisquam praesentium modi.</p>
-                    <a href="">***bottone***</a>
+                    <a class="bene-btn" href="">more</a>
                 </div>
                 <div class="card white-bg bord-radio-20 m-b20 debug">
-                    <h2>01</h2>
-                    <h3>Hight Quality</h3>
+                    <h4 class="purpl-txt">06</h4>
+                    <h3  class="purpl-txt">Hight Quality</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam ratione ipsum iste, eveniet repellat voluptates adipisci maxime quisquam praesentium modi.</p>
-                    <a href="">***bottone***</a>
+                    <a class="bene-btn" href="">more</a>
                 </div>
             </div>
 
@@ -169,7 +169,7 @@
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus voluptatem quam provident natus molestiae, explicabo quo deserunt commodi, nisi repellat ratione, porro iste quos temporibus a! Rerum dolores quas laudantium!</p>
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nisi culpa facilis maxime soluta necessitatibus praesentium sapiente ab. Magnam porro amet alias quis? Illum, amet deleniti et nihil sint quisquam velit?</p>
                 <div class="round-img bord-radio100 ovf">
-                    <img class="round-img" src="./img/about.jpg" alt="">
+                    <img src="./img/about.jpg" alt="">
                 </div>
                 <h2>I help companies Lorem, ipsum dolor sit amet consectetur adipisicing elit. Soluta, id.</h2>
                 <a href="#">***icona***Find me on linkedin</a>
