added details and to all txt, img and spacing

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                         <h2 class="p-b20 blue-text">Get a demo application</h2>
                         <p class="p-b20 txt-interli">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Veritatis voluptatem perferendis dignissimos sapiente pariatur excepturi doloremque dicta debitis nemo eveniet!</p>
                         <a class="p-b20 text-deco feat-btn inblock bord-radio-20 m-b20" href="#">
-                            <i class="fa-brands fa-apple "></i>App Store
+                            <i class="fa-brands fa-apple p-lr5"></i>App Store
                         </a>
                     </div>
                     <div>
@@ -163,29 +163,31 @@
             </div>
 
         </section>
-        <section id="aboutus">
+        <section id="aboutus" class="p-tb40">
             <div class="container debug">
-                <h2>About Us</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus voluptatem quam provident natus molestiae, explicabo quo deserunt commodi, nisi repellat ratione, porro iste quos temporibus a! Rerum dolores quas laudantium!</p>
+                <h2 >About Us</h2>
+                <p >Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus voluptatem quam provident natus molestiae, explicabo quo deserunt commodi, nisi repellat ratione, porro iste quos temporibus a! Rerum dolores quas laudantium porro iste quos temporibus a! Rerum dolores quas laudantium! Nisi culpa facilis maxime soluta necessitatibus praesentium sapiente ab. Magnam porro amet alias quis?</p>
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nisi culpa facilis maxime soluta necessitatibus praesentium sapiente ab. Magnam porro amet alias quis? Illum, amet deleniti et nihil sint quisquam velit?</p>
-                <div class="round-img bord-radio100 ovf">
+                <div class="round-img bord-radio100 ovf m-b20">
                     <img src="./img/about.jpg" alt="">
                 </div>
-                <h2>I help companies Lorem, ipsum dolor sit amet consectetur adipisicing elit. Soluta, id.</h2>
-                <a href="#">***icona***Find me on linkedin</a>
+                <h2 class="m-b20">I help companies Lorem, ipsum dolor sit amet consectetur adipisicing elit. Soluta, id.</h2>
+                <a class="about-btn" href="#"><i class="fa-brands fa-linkedin p-lr5"></i>Find me on linkedin</a>
           
             </div>
 
         </section>
         <section id="cta" class="purpl-bg">
             <div class="container debug">
-                <p>get started</p>
-                <h3>Simple, Transparent Pricing</h3>
-                <h2>It's Free!</h2>
-                <p>We're still in beta and we will be for a while. As we add more functionality, we'll look into other plans with more controls.</p>
-                <a href="#">Get Started</a>
-                <span>Copyright 2021 Boolean * Classe XX * Privacy policy
-                </span>
+                <h4 class="white-txt upcase text-center ">get started</h4>
+                <h3 class="white-txt text-center p-b20">Simple, Transparent Pricing</h3>
+                <h2 class="text-center p-b20 p-t20">It's Free!</h2>
+                <p class="white-txt text-center m-b20 ">We're still in beta and we will be for a while. As we add more functionality, we'll look into other plans with more controls.</p>
+                <div class="text-center p-b20 p-t20 m-0a">
+                    <a class="cta-btn" href="#">Get Started</a>
+                </div>
+                <p class="text-center white-txt m-t20 m-b20">Copyright 2021 Boolean * Classe XX * Privacy policy
+                </p>
             </div>
 
         </section>
@@ -194,8 +196,8 @@
     </main>
     <footer>
         <div class="container debug">
-            <span>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aperiam ipsa nemo illum quod odio explicabo quisquam necessitatibus minima qui quibusdam.</span>
-            <span> <a href=""> Lorem ipsum</a> dolor sit amet <a href="">onsectetur adipisicing</a></span>
+            <p class="text-center m-b20">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aperiam ipsa nemo illum quod odio explicabo quisquam necessitatibus minima qui quibusdam.</span>
+            <p class="text-center m-t20"> <a class="purpl-txt" href=""> Lorem ipsum</a> dolor sit amet <a class="purpl-txt" href="">onsectetur adipisicing</a></span>
         </div>
     </footer>
 
