--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
     <main>
 
         <section class=" p-b50" id="features">
-            <div class="container debug">
-                <div class="card aqua-bg bord-radio-20 ">
+            <div class="container d-flexmq debug">
+                <div class="card m-b20 aqua-bg bord-radio-20 ">
                     <div>
                         <h2 class="p-b20 blue-text">Get a demo application</h2>
                         <p class="p-b20 txt-interli">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Veritatis voluptatem perferendis dignissimos sapiente pariatur excepturi doloremque dicta debitis nemo eveniet!</p>
@@ -43,7 +43,7 @@
                         <img class="p-bneg30 img100" src="./img/phone.png" alt="">
                     </div>
                 </div>
-                <div class="card aqua-bg bord-radio-20 m-t20 text-center ">
+                <div class="card aqua-bg bord-radio-20 text-center ">
                     <div><i class="fa-solid fa-file-code blue-text icon-big p-b20"></i></div>
                     <h2  class="p-b20 blue-text">Clean Code</h2>
                     <p class="p-b20 txt-interli">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore eveniet ratione fugiat ex nisi atque, voluptatem totam recusandae natus eligendi.</p>
@@ -96,26 +96,33 @@
                     <h2 class="purpl-txt text-center p-t20 p-b20">We are committed experts partners</h2>
                     <p class="text-center txt-interli p-t20 p-b20">We place huge value on strong relationship and have seen the benefits they bring to our business. Customers feedback is vital in helping us to get it right.</p>
                 </div>
-                <div class="card bord-radio-40 purpl-bg m-t20 m-b20">
+                <div class="card d-flexmq-nowrap justco-mq-start bord-radio-40 purpl-bg m-t20 m-b20">
                     <div class="round-img m-0a bord-radio100 ovf">
                         <img src="./img/testimonial1.jpg" alt="">
                     </div>
-                    <p class="text-center txt-interli white-txt p-t20 p-b20"><i class="fa-solid fa-quote-left"></i>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut excepturi enim ex aperiam suscipit vitae cum mollitia eligendi tenetur nisi.<i class="fa-solid fa-quote-right"></i></p>
-                    <h3 class="text-center white-txt upcase">Nat Reynolds</h3>
+                    <div class="right p-mq-l20">
+                        <p class="text-center txt-interli white-txt p-t20 p-b20 txt-start"><i class="fa-solid fa-quote-left"></i>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut excepturi enim ex aperiam suscipit vitae cum mollitia eligendi tenetur nisi.<i class="fa-solid fa-quote-right"></i></p>
+                        <h3 class="text-center white-txt upcase txt-start">Nat Reynolds</h3>
+                    </div>
+
                 </div>
-                <div class="card bord-radio-40 purpl-bg m-b20">
+                <div class="card d-flexmq-nowrap justco-mq-start bord-radio-40 purpl-bg m-b20">
                     <div class="round-img m-0a bord-radio100 ovf">
                         <img src="./img/testimonial2.jpg" alt="">
                     </div>
-                    <p class="text-center txt-interli white-txt p-t20 p-b20"><i class="fa-solid fa-quote-left"></i>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut excepturi enim ex aperiam suscipit vitae cum mollitia eligendi tenetur nisi.<i class="fa-solid fa-quote-right"></i></p>
-                    <h3 class="text-center white-txt upcase">celia almeda</h3>
+                    <div class="right p-mq-l20">
+                        <p class="text-center txt-interli white-txt p-t20 p-b20 txt-start"><i class="fa-solid fa-quote-left"></i>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut excepturi enim ex aperiam suscipit vitae cum mollitia eligendi tenetur nisi.<i class="fa-solid fa-quote-right"></i></p>
+                        <h3 class="text-center white-txt upcase txt-start">celia almeda</h3>
+                    </div>
                 </div>
-                <div class="card bord-radio-40 purpl-bg ">
+                <div class="card d-flexmq-nowrap justco-mq-start bord-radio-40 purpl-bg ">
                     <div class="round-img m-0a bord-radio100 ovf">
                         <img src="./img/testimonial3.jpg" alt="">
                     </div>
-                    <p class="text-center txt-interli white-txt p-t20 p-b20"><i class="fa-solid fa-quote-left"></i>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut excepturi enim ex aperiam suscipit vitae cum mollitia eligendi tenetur nisi.<i class="fa-solid fa-quote-right"></i></p>
-                    <h3 class="text-center white-txt upcase">bob roberts</h3>
+                    <div class="right p-mq-l20">
+                        <p class="text-center txt-interli white-txt p-t20 p-b20 txt-start"><i class="fa-solid fa-quote-left"></i>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut excepturi enim ex aperiam suscipit vitae cum mollitia eligendi tenetur nisi.<i class="fa-solid fa-quote-right"></i></p>
+                        <h3 class="text-center white-txt upcase txt-start">bob roberts</h3>
+                    </div>
                 </div>
 
             </div>
