--- a/index.html
+++ b/index.html
@@ -131,56 +131,61 @@
         <section id="benefits" class="purpl-bg p-b20">
             <div class="container debug">
                 <h2 class="white-txt text-center p-tb40">Benefits of working with us</h2>
-                <div class="card white-bg bord-radio-20 m-b20 debug">
-                    <h4 class="purpl-txt p-b20">01</h4>
-                    <h3 class="purpl-txt p-b20">Hight Quality</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam ratione ipsum iste, eveniet repellat voluptates adipisci maxime quisquam praesentium modi.</p>
-                    <a class="bene-btn" href="">more</a>
-                </div>
-                <div class="card white-bg bord-radio-20 m-b20 debug">
-                    <h4 class="purpl-txt p-b20">02</h4>
-                    <h3 class="purpl-txt p-b20">Hight Quality</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam ratione ipsum iste, eveniet repellat voluptates adipisci maxime quisquam praesentium modi.</p>
-                    <a class="bene-btn" href="">more</a>
-                </div>
-                <div class="card white-bg bord-radio-20 m-b20 debug">
-                    <h4 class="purpl-txt p-b20">03</h4>
-                    <h3 class="purpl-txt p-b20">Hight Quality</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam ratione ipsum iste, eveniet repellat voluptates adipisci maxime quisquam praesentium modi.</p>
-                    <a class="bene-btn" href="">more</a>
-                </div>
-                <div class="card white-bg bord-radio-20 m-b20 debug">
-                    <h4 class="purpl-txt p-b20">04</h4>
-                    <h3 class="purpl-txt p-b20">Hight Quality</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam ratione ipsum iste, eveniet repellat voluptates adipisci maxime quisquam praesentium modi.</p>
-                    <a class="bene-btn" href="">more</a>
-                </div>
-                <div class="card white-bg bord-radio-20 m-b20 debug">
-                    <h4 class="purpl-txt p-b20">05</h4>
-                    <h3 class="purpl-txt p-b20">Hight Quality</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam ratione ipsum iste, eveniet repellat voluptates adipisci maxime quisquam praesentium modi.</p>
-                    <a class="bene-btn" href="">more</a>
-                </div>
-                <div class="card white-bg bord-radio-20 m-b20 debug">
-                    <h4 class="purpl-txt">06</h4>
-                    <h3  class="purpl-txt">Hight Quality</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam ratione ipsum iste, eveniet repellat voluptates adipisci maxime quisquam praesentium modi.</p>
-                    <a class="bene-btn" href="">more</a>
-                </div>
+                <div class="d-flexmq justco-spacebtw gap10-15">
+                    <div class="card white-bg bord-radio-20 m-b20 debug">
+                        <h4 class="purpl-txt p-b20">01</h4>
+                        <h3 class="purpl-txt p-b20">Hight Quality</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam ratione ipsum iste, eveniet repellat voluptates adipisci maxime quisquam praesentium modi.</p>
+                        <a class="bene-btn" href="">more</a>
+                    </div>
+                    <div class="card white-bg bord-radio-20 m-b20 debug">
+                        <h4 class="purpl-txt p-b20">02</h4>
+                        <h3 class="purpl-txt p-b20">Hight Quality</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam ratione ipsum iste, eveniet repellat voluptates adipisci maxime quisquam praesentium modi.</p>
+                        <a class="bene-btn" href="">more</a>
+                    </div>
+                    <div class="card white-bg bord-radio-20 m-b20 debug">
+                        <h4 class="purpl-txt p-b20">03</h4>
+                        <h3 class="purpl-txt p-b20">Hight Quality</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam ratione ipsum iste, eveniet repellat voluptates adipisci maxime quisquam praesentium modi.</p>
+                        <a class="bene-btn" href="">more</a>
+                    </div>
+                    <div class="card white-bg bord-radio-20 m-b20 debug">
+                        <h4 class="purpl-txt p-b20">04</h4>
+                        <h3 class="purpl-txt p-b20">Hight Quality</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam ratione ipsum iste, eveniet repellat voluptates adipisci maxime quisquam praesentium modi.</p>
+                        <a class="bene-btn" href="">more</a>
+                    </div>
+                    <div class="card white-bg bord-radio-20 m-b20 debug">
+                        <h4 class="purpl-txt p-b20">05</h4>
+                        <h3 class="purpl-txt p-b20">Hight Quality</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam ratione ipsum iste, eveniet repellat voluptates adipisci maxime quisquam praesentium modi.</p>
+                        <a class="bene-btn" href="">more</a>
+                    </div>
+                    <div class="card white-bg bord-radio-20 m-b20 debug">
+                        <h4 class="purpl-txt">06</h4>
+                        <h3  class="purpl-txt">Hight Quality</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam ratione ipsum iste, eveniet repellat voluptates adipisci maxime quisquam praesentium modi.</p>
+                        <a class="bene-btn" href="">more</a>
+                    </div>
+                </div>   
             </div>
 
         </section>
         <section id="aboutus" class="p-tb40">
-            <div class="container debug">
-                <h2 >About Us</h2>
-                <p >Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus voluptatem quam provident natus molestiae, explicabo quo deserunt commodi, nisi repellat ratione, porro iste quos temporibus a! Rerum dolores quas laudantium porro iste quos temporibus a! Rerum dolores quas laudantium! Nisi culpa facilis maxime soluta necessitatibus praesentium sapiente ab. Magnam porro amet alias quis?</p>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nisi culpa facilis maxime soluta necessitatibus praesentium sapiente ab. Magnam porro amet alias quis? Illum, amet deleniti et nihil sint quisquam velit?</p>
-                <div class="round-img bord-radio100 ovf m-b20">
-                    <img src="./img/about.jpg" alt="">
+            <div class="container d-flexmq debug">
+                <div class="left60 padding30">
+                    <h2 >About Us</h2>
+                    <p >Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus voluptatem quam provident natus molestiae, explicabo quo deserunt commodi, nisi repellat ratione, porro iste quos temporibus a! Rerum dolores quas laudantium porro iste quos temporibus a! Rerum dolores quas laudantium! Nisi culpa facilis maxime soluta necessitatibus praesentium sapiente ab. Magnam porro amet alias quis?</p>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nisi culpa facilis maxime soluta necessitatibus praesentium sapiente ab. Magnam porro amet alias quis? Illum, amet deleniti et nihil sint quisquam velit?</p>
                 </div>
-                <h2 class="m-b20">I help companies Lorem, ipsum dolor sit amet consectetur adipisicing elit. Soluta, id.</h2>
-                <a class="about-btn" href="#"><i class="fa-brands fa-linkedin p-lr5"></i>Find me on linkedin</a>
-          
+                <div class="right40">
+                    <div class="round-img bord-radio100 ovf m-b20">
+                        <img src="./img/about.jpg" alt="">
+                    </div>
+                    <h2 class="m-b20">I help companies Lorem, ipsum dolor sit amet consectetur adipisicing elit. Soluta, id.</h2>
+                    <a class="about-btn" href="#"><i class="fa-brands fa-linkedin p-lr5"></i>Find me on linkedin</a>
+                </div>   
             </div>
 
         </section>
@@ -189,7 +194,9 @@
                 <h4 class="white-txt upcase text-center ">get started</h4>
                 <h3 class="white-txt text-center p-b20">Simple, Transparent Pricing</h3>
                 <h2 class="text-center p-b20 p-t20">It's Free!</h2>
-                <p class="white-txt text-center m-b20 ">We're still in beta and we will be for a while. As we add more functionality, we'll look into other plans with more controls.</p>
+                <div class="lil-txt-box m-0a">
+                    <p class="white-txt text-center m-b20 ">We're still in beta and we will be for a while. As we add more functionality, we'll look into other plans with more controls.</p>
+                 </div>     
                 <div class="text-center p-b20 p-t20 m-0a">
                     <a class="cta-btn" href="#">Get Started</a>
                 </div>
@@ -203,8 +210,10 @@
     </main>
     <footer>
         <div class="container debug">
-            <p class="text-center m-b20">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aperiam ipsa nemo illum quod odio explicabo quisquam necessitatibus minima qui quibusdam.</span>
-            <p class="text-center m-t20"> <a class="purpl-txt" href=""> Lorem ipsum</a> dolor sit amet <a class="purpl-txt" href="">onsectetur adipisicing</a></span>
+            <div class="lil-txt-box m-0a">
+                <p class="text-center m-b20">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aperiam ipsa nemo illum quod odio explicabo quisquam necessitatibus minima qui quibusdam.</span>
+                <p class="text-center m-t20"> <a class="purpl-txt" href=""> Lorem ipsum</a> dolor sit amet <a class="purpl-txt" href="">onsectetur adipisicing</a></span>
+            </div>
         </div>
     </footer>
 
