--- a/index.html
+++ b/index.html
@@ -13,19 +13,19 @@
 </head>
 <body>
     <header>
-        <nav class="container d-flex justco-spacebtw aligit-center -20">
+        <nav class="container d-flex justco-spacebtw ">
             <img src="./img/logo.png" alt="logo">
             <a href="#"><i class="fa-solid fa-bars"></i></a>
-        </nav>
-            <div>
+           
                 <ul>
-                    <li><a href="">Planning</a></li>
-                    <li><a href="">Testimonials</a></li>
-                    <li><a href="">Features</a></li>
-                    <li><a href="">About Us</a></li>
-                    <li><a href="">Get Stated</a></li>      
+                    <li><a class="small-txt" href="">Planning</a></li>
+                    <li><a class="small-txt" href="">Testimonials</a></li>
+                    <li><a class="small-txt" href="">Features</a></li>
+                    <li><a class="small-txt" href="">About Us</a></li>
+                    <li><a class="nav-btn small-txt" href="">Get Started</a></li>      
                 </ul>
-            </div>
+            
+        </nav>    
     </header>
     <main>
 
