feature section 992px ok

--- a/index.html
+++ b/index.html
@@ -31,15 +31,15 @@
 
         <section class=" p-b50" id="features">
             <div class="container d-flexmq debug">
-                <div class="card m-b20 aqua-bg bord-radio-20 ">
-                    <div>
+                <div class="card d-flexmq m-b20 aqua-bg bord-radio-20 ">
+                    <div class="split-l">
                         <h2 class="p-b20 blue-text">Get a demo application</h2>
                         <p class="p-b20 txt-interli">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Veritatis voluptatem perferendis dignissimos sapiente pariatur excepturi doloremque dicta debitis nemo eveniet!</p>
                         <a class="p-b20 text-deco feat-btn inblock bord-radio-20 m-b20" href="#">
                             <i class="fa-brands fa-apple p-lr5"></i>App Store
                         </a>
                     </div>
-                    <div>
+                    <div class="split-r">
                         <img class="p-bneg30 img100" src="./img/phone.png" alt="">
                     </div>
                 </div>
